--- a/Form.html
+++ b/Form.html
@@ -96,16 +96,16 @@
        <h2> EMPLOY REGISTRATION FORM</h2>
        <form action="/submit_registration" method="POST">
            <div class="form-group">
-               <label for="username">Username:</label>
-               <input type="text" id="username" name="username" required>
+               <label for="Name">Name:</label>
+               <input type="text" id="Name" name="Name" required>
            </div>
            <div class="form-group">
                <label for="email">Email:</label>
                <input type="email" id="email" name="email" required>
            </div>
            <div class="form-group">
-               <label for="password">Password:</label>
-               <input type="password" id="password" name="password" required>
+               <label for="Phone Number">Phone Number:</label>
+               <input type="Phone Number" id="Phone Number" name="Phone Number" required>
            </div>
            <div class="form-group">
            <lable for="Dept"><b>Dept</b></lable>
@@ -118,8 +118,8 @@
                    <label for="other"><input type="radio" id="other" name="gender" value="other"> Other</label>
                </div>
             <div class="form-group">
-               <label for="comments">Comments:</label>
-               <textarea id="comments" name="comments" rows="4"></textarea>
+               <label for="Addres">Addres:</label>
+               <textarea id="Addres" name="Addres" rows="4"></textarea>
             </div>
             <div class="form-group">
            </div>
